Introduces DataFetcherResults in the qraphql queries for error handling purposes.